--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.4",
+    "material-design-icons": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-scripts": "^4.0.2",
     "smooth-scroll": "^16.1.3"
   },
